# minco-trajectory-planner

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/planner/lib/planner/: integrated_drone_mapping_node_with_drone_tracking
install/planner/share/ament_index/resource_index/package_run_dependencies/: planner
install/planner/share/planner/: local_setup.sh  package.sh
install/planner/share/planner/config/: mapping_tracking_params.yaml
install/planner/share/planner/launch/: grid_path_log.csv
log/: latest_build
src/planner/: CMakeLists.txt  package.xml
src/planner/include/planner/SFC_generation/: corridor_builder.hpp  final_astar.hpp  final_hstar.hpp  final_obstacle_inflate.hpp  linear_eq.hpp  polyhedrongenerator_class.hpp  quickhull_class.hpp
src/planner/include/planner/Utils/: odometry_utils.hpp  vehicle_utils.hpp
src/planner/include/planner/mapping/: grid_mapper.hpp
src/planner/include/planner/minco_planner/: gcopter.hpp  minco.hpp
src/planner/launch/: mapping_tracking.launch.py
src/planner/scripts/: executed_path.csv  map.csv  planned_traj.csv  plot.py  plot_tracking_error.py
src/planner/src/: grid_path_log.csv  integrated_drone_mapping_node_with_drone_tracking.cpp
